--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.24.0"
 pytest = "^6.0.1"
 
 [tool.poetry.dev-dependencies]
+coverage = "^5.2.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
